external-crates/move/crates/move-compiler/tests/move_check/parser/less_than_space.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_check/parser/less_than_space.move:5:13
  │
5 │         if (v< 10) return v;
  │             ^^^^^^^^^^^^^^^ Expected name to be followed by a brace-enclosed list of field expressions or a parenthesized list of arguments for a function call

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/less_than_space.move:5:16
  │
5 │         if (v< 10) return v;
  │                ^^ Expected '::' after the anonymous address in this module access chain

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/less_than_space.move:5:28
  │
5 │         if (v< 10) return v;
  │              -             ^ Expected '>'
  │              │              
  │              To match this '<'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/less_than_space.move:5:28
  │
5 │         if (v< 10) return v;
  │                            ^
  │                            │
  │                            Unexpected ';'
  │                            Expected ')'
